--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Porfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>        
-        <div class="navbar">
-            <span></span>
-            <span></span>
-            <span></span>
+    <nav>
+        <h1>Ven Gallardo</h1>
+        <div class="tagline">My Minimalist <br/>Portfolio</div>
+        <div class="nav-ctn">
+            <div class="nav-btn" id="nav-btn">
+            </div>
         </div>
-        <ul>
-            <li><a class="li-a" href="http://">Road Map</a></li>
-            <li><a class="li-a" href="http://">Skills</a></li>
-            <li><a class="li-a" href="http://">About Me</a></li>
-            
-        </ul>
+        
+        <div class="page" id="page">
+            <ul>
+                <li>MY PROJECTS</li>
+                <li>ABOUT ME</li>
+                <li>CONTACT</li>
+            </ul>
+        </div>
     </nav>
-    <section class="hero">
-
-    </section>
+    <script src="script.js"></script>
 </body>
 </html>
