--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Porfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="project.css" class="css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@100;500;900&display=swap');
     </style>
@@ -21,17 +22,62 @@
         
         <div class="page" id="page">
             <ul class="nav">
-                <li id="project">PROJECTS</li>
-                <li id="about">ABOUT</li>
-                <li id="contact">CONTACT</li>
-                <li id="skills">SKILLS</li>
+                <li class="btn" id="project" >PROJECTS</li>
+                <li class="btn" id="about" >ABOUT</li>
+                <li class="btn" id="contact" >CONTACT</li>
+                <li class="btn" id="skills" >SKILLS</li>
             </ul>
             <div class="logo">Ven Gallardo</div>
-            <div class="container" id="about-c">
+            <div class="container" id="about">
                 <div class="nav-det">
-                    <p>Navigation</p>
+                    <p onclick="back()">Navigation</p>
                     <p class="not">></p>
                     <p>About</p>
+                </div>
+                <div class="photo">
+                    <img src="img/Untitled design (7).png" alt="">
+                </div>
+                <div class="about-me">
+                    <p> Hi there, My name is Ven Gallardo and I specialized in website development and design. Before I was just a grab driver and a driver for a rental services here in Manila. But when the pandemic strikes, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. And then after learning some basic knowledge on how websites work. I then started to code in HTML, CSS, JavaScript and React JS. Now this website is running only with code using google cloud as server.</p>
+                </div>
+                <div class="download">Download my resume...</div>
+            </div>
+            <div class="container project" id="project">
+                <div class="nav-det">
+                    <p onclick="back()">Navigation</p>
+                    <p class="not">></p>
+                    <p>Project</p>
+                </div>
+                <div class="title">
+                    <h2>Here are some of my personal projects...</h2>
+                </div>
+                <div class="myprojects">
+                    <div class="content"><h2>sample</h2></div>
+                    <div class="content"><h2>sample</h2></div>
+                    <div class="content"><h2>sample</h2></div>
+                    <div class="content"><h2>sample</h2></div>
+                </div>
+                
+            </div>
+            <div class="container" id="skills">
+                <div class="nav-det">
+                    <p onclick="back()">Navigation</p>
+                    <p class="not">></p>
+                    <p>Skills</p>
+                </div>
+                <div class="photo">
+                    <img src="img/Untitled design (7).png" alt="">
+                </div>
+                <div class="about-me">
+                    <p> Hi there, My name is Ven Gallardo and I specialized in website development and design. Before I was just a grab driver and a driver for a rental services here in Manila. But when the pandemic strikes, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. And then after learning some basic knowledge on how websites work. I then started to code in HTML, CSS, JavaScript and React JS. Now this website is running only with code using google cloud as server.</p>
+                </div>
+                <div class="download">Download my resume...</div>
+            </div>
+            <div class="container" id="contact">
+                <div class="nav-det">
+                    <p onclick="back()">Navigation</p>
+                    <p class="not">></p>
+                    <p>Contact</p>
                 </div>
                 <div class="photo">
                     <img src="img/Untitled design (7).png" alt="">
