--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <img src="img/Untitled design (7).png" alt="">
                 </div>
                 <div class="about-me">
-                    <p> Hi there, my name is Ven Gallardo and I specialized in website development and design. Before I was just a grab driver and also drives for a rental service here in Manila. But during the pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript, Netlify as my hosting site and Airtable as my Backend.</p>
+                    <p> Hi there, my name is Ven Gallardo and I specialized in web development and design. Before I was just a grab driver and also drives for rental service here in Manila. But during this pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript and Netlify as my hosting site.</p>
                 </div>
                 <div class="download">For more information below.</div>
             </div>
