--- a/index.html
+++ b/index.html
@@ -161,20 +161,21 @@
                 </div>
                 <div class="cta">
                     <h3>Get in touch</h3>
-                    <form action="">
+                
+                    <form method="POST" name="contact" data-netlify="true">
                         <div class="name-email">
                             <div class="name">
                                 <label for="">Name</label>
-                                <input type="text">
+                                <input type="text" name="name" required>
                             </div>
                             <div class="email">
                                 <label for="">Email</label>
-                                <input type="text">
+                                <input type="email" name="email" required>
                             </div> 
                         </div>
                         <div class="message">
                             <label for="">Message</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <textarea name="message" id="" cols="30" rows="10" required></textarea>
                             <!-- <input type="textarea"> -->
                         </div>
                         <input type="submit" value="Submit" class="submit-btn">
