update link and email details

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="about-me">
                     <p> Hi there, my name is Ven Gallardo and I specialized in web development and design. Before I was just a grab driver and also drives for rental service here in Manila. But during this pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript and Netlify as my hosting site.</p>
                 </div>
-                <div class="download">For more information below.</div>
+                <div class="download">For more information below.(nolink)</div>
             </div>
             <div class="container project" id="project">
                 <div class="nav-det">
@@ -136,7 +136,7 @@
                     </ul>
                   </div>
                 
-                <div class="download">Redirect to my CV <a href="">Link</a></div>
+                <div class="download">Redirect to my CV(nolink)<a href="">Link</a></div>
             </div>
             <div class="container contact" id="contact">
                 <div class="nav-det">
@@ -152,7 +152,7 @@
                         <thead></thead>
                         <tr></tr>
                             <td class="td-title">Email</td>
-                            <td class="td-det">letskeddotcom@gmail.com</td>
+                            <td class="td-det">vengallardoportfolio1@gmail.com</td>
                         <tr>
                             <td class="td-title">Phone number</td>
                             <td class="td-det">0906-006-5922 (Globe)</td>
@@ -181,7 +181,7 @@
                         <input type="submit" value="Submit" class="submit-btn">
                     </form>
                 </div>
-                <div class="download">Download my CV</div>
+                <div class="download">Download my CV(nolink)</div>
             </div>
         </div>
     </nav>
