update about info, skills info, and links

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     <img src="img/Untitled design (7).png" alt="">
                 </div>
                 <div class="about-me">
-                    <p> Hi there, my name is Ven Gallardo and I specialized in web development and design. Before I was just a grab driver and also drives for rental service here in Manila. But during this pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript and Netlify as my hosting site.</p>
+                    <p> Hi there, my name is Ven Gallardo from Laguna. I specialized in web development and UX/UI designs. Before I was a grab driver and also drives for rental service here in Manila. But during this pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript and Netlify as my hosting site.</p>
                 </div>
-                <div class="download">For more information below.(nolink)</div>
+                <div class="download">For more information below.</div>
             </div>
             <div class="container project" id="project">
                 <div class="nav-det">
@@ -129,14 +129,14 @@
                         <li>Experience in using HTML, JavaScript and CSS.</li>
                         <li>Experience in designing platform like figma.</li>
                         <li>Eager on experimenting and researching in UI/UX implementation.</li>
-                        <li>Knowledge in tools, such as SASS, GULP, GIT and GITHUB.</li>
-                        <li>Experience in Backend testing with MySQLi, PHP, PostMan and Airtable</li>
-                        <li>Proficient in no code tools such as Glide, Bubble.io and Airtable.</li>
+                        <li>Knowledge in tools, such as SASS, GIT and GITHUB.</li>
+                        <li>Experience in low-code/no-code backend platforms, such as Zapier, Mailchimp and Airtable.</li>
+                        <li>Proficient in no code tools such as Glide, Bubble.io.</li>
                         <li>Ability to demonstrate an initiative to achieve specific outcome.</li>
                     </ul>
                   </div>
                 
-                <div class="download">Redirect to my CV(nolink)<a href="">Link</a></div>
+                <div class="download">Redirect to my CV<a href="">Link</a></div>
             </div>
             <div class="container contact" id="contact">
                 <div class="nav-det">
@@ -181,7 +181,7 @@
                         <input type="submit" value="Submit" class="submit-btn">
                     </form>
                 </div>
-                <div class="download">Download my CV(nolink)</div>
+                <div class="download">Download my CV</div>
             </div>
         </div>
     </nav>
