--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         </div>
         <div class="version">
-            v1.0.1
+            v1.0.7
         </div>
         <div class="page" id="page">
             <ul class="nav">
@@ -71,14 +71,14 @@
                     <div class="card one">
                         <div class="project-content">
                             <h2 class="project-title">My Portfolio</h2>
-                            <p class="card-body">My first website using VSCode.</p>
+                            <p class="card-body">My first website using HTML, CSS, vanilla JS, Netlify.io and Zapier.</p>
                             <a href="index.html" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
                         </div>
                     </div>
                     <div class="card two">
                         <div class="project-content">
                             <h2 class="project-title">Gepeet.com</h2>
-                            <p class="card-body">My first project using bubble.io</p>
+                            <p class="card-body">My first project using bubble.io and google cloud.</p>
                             <a href="https://gepeet.com/about_page" target="_blank" rel="noopener noreferrer" class="button">Visit site</a>
                         </div>
                     </div>
