--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </div>
                 
                 
-                <div class="title-no-code">No Code Plateforms</div>
+                <div class="title-no-code">No Code Platforms</div>
                 <div class="icon-logo">
                     <div class="log glide"></div>
                     <div class="log bubble"></div>
