added new sample

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
                     </div>
                     <div class="card three">
                         <div class="project-content">
-                            <h2 class="project-title">Project 3</h2>
-                            <p class="card-body">This is just a sample of something amazing</p>
-                            <a href="#" class="button">Visit site</a>
+                            <h2 class="project-title">FEM - website design</h2>
+                            <p class="card-body">Sample website design</p>
+                            <a href="https://reverent-lumiere-d13796.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
                     <div class="card four">
