link to open new tab

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="project-content">
                             <h2 class="project-title">FEM - website design</h2>
                             <p class="card-body">Sample website design</p>
-                            <a href="https://reverent-lumiere-d13796.netlify.app/" class="button">Visit site</a>
+                            <a href="https://reverent-lumiere-d13796.netlify.app/" target="_blank" rel="noopener noreferrer" class="button">Visit site</a>
                         </div>
                     </div>
                     <div class="card four">
