changed http address

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="project-content">
                             <h2 class="project-title">Gepeet.com</h2>
                             <p class="card-body">My first project using bubble.io and google cloud.</p>
-                            <a href="https://gepeet.com/about_page" target="_blank" rel="noopener noreferrer" class="button">Visit site</a>
+                            <a href="https://rush500.bubbleapps.io/version-test/?debug_mode=true&mode=index" target="_blank" rel="noopener noreferrer" class="button">Visit site</a>
                         </div>
                     </div>
                     <div class="card three">
