--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                             <a href="https://elastic-blackwell-c983cf.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
+                    <div class="card five">
+                        <div class="project-content">
+                            <h2 class="project-title">TFC website(clone)</h2>
+                            <p class="card-body">Home page of TFC website made in React js</p>
+                            <a href="https://competent-mcclintock-994ef7.netlify.app/" class="button">Visit site</a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container myskill" id="skills">
