added new project
generative art

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
                     <h2>Personal Projects</h2>
                 </div>
                 <div class="myprojects">
+                    <div class="card six">
+                        <div class="project-content">
+                            <h2 class="project-title">Generative Art</h2>
+                            <p class="card-body">Automating art creation thru code</p>
+                            <a href="https://generative-art-ven-gallardo.netlify.app/" class="button">Visit site</a>
+                        </div>
+                    </div>
                     <div class="card one">
                         <div class="project-content">
                             <h2 class="project-title">My Portfolio</h2>
