--- a/index.html
+++ b/index.html
@@ -72,16 +72,10 @@
                         <div class="project-content">
                             <h2 class="project-title">Generative Art</h2>
                             <p class="card-body">Automating art creation thru code</p>
-                            <a href="https://generative-art-ven-gallardo.netlify.app/" class="button">Visit site</a>
+                            <a target="_blank" href="https://generative-art-ven-gallardo.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
-                    <div class="card one">
-                        <div class="project-content">
-                            <h2 class="project-title">My Portfolio</h2>
-                            <p class="card-body">My first website using HTML, CSS, vanilla JS, Netlify.io and Zapier.</p>
-                            <a href="index.html" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
-                        </div>
-                    </div>
+                    
                     <div class="card two">
                         <div class="project-content">
                             <h2 class="project-title">Gepeet.com</h2>
@@ -100,14 +94,21 @@
                         <div class="project-content">
                             <h2 class="project-title">Adron shoes</h2>
                             <p class="card-body">Simple shoes website</p>
-                            <a href="https://elastic-blackwell-c983cf.netlify.app/" class="button">Visit site</a>
+                            <a  target="_blank" href="https://elastic-blackwell-c983cf.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
                     <div class="card five">
                         <div class="project-content">
                             <h2 class="project-title">TFC website(clone)</h2>
                             <p class="card-body">Home page of TFC website made in React js</p>
-                            <a href="https://competent-mcclintock-994ef7.netlify.app/" class="button">Visit site</a>
+                            <a  target="_blank" href="https://competent-mcclintock-994ef7.netlify.app/" class="button">Visit site</a>
+                        </div>
+                    </div>
+                    <div class="card one">
+                        <div class="project-content">
+                            <h2 class="project-title">My Portfolio</h2>
+                            <p class="card-body">My first website using HTML, CSS, vanilla JS, Netlify.io and Zapier.</p>
+                            <a href="index.html" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
                         </div>
                     </div>
                 </div>
