--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="title">
                     <h2>Skills</h2>
                 </div>
-                <div class="title-code">Coding</div>
+                <div class="title-code">Technologies</div>
                 
                 <div class="icon-logo">
                     <div class="log html"></div>
