added new project

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
                             <a target="_blank" href="https://generative-art-ven-gallardo.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
+                    <div class="card seven">
+                        <div class="project-content">
+                            <h2 class="project-title">Beer website</h2>
+                            <p class="card-body">Template for a beer website. Technologies are React, Heroku and CSS</p>
+                            <a href="https://beer-website-sample.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
+                        </div>
+                    </div>
                     
                     <div class="card two">
                         <div class="project-content">
