added link to my cv

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div class="about-me">
                     <p> Hi there, my name is Ven Gallardo from Laguna. I specialized in web development and UX/UI designs. Before I was a grab driver and also drives for rental service here in Manila. But during this pandemic, I decided to shift my career into web development. This is to pursue my dream on programming and designs. I first stumbled on no code platforms like bubble.io and glide.io. Then took some basic knowledge on how websites works using programming codes. I then started to tackle HTML, CSS, JavaScript and PHP. Now this website is running with code using HTML, CSS, Vanilla Javascript and Netlify as my hosting site.</p>
                 </div>
-                <div class="download">For more information below.</div>
+                <div class="download">Redirect to my CV <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/1t43AA5GZBWG2vQlJ_L6km9_mHzYI1oiDbDs01NqG7jE/edit?usp=sharing">Link</a></div>
+            
             </div>
             <div class="container project" id="project">
                 <div class="nav-det">
@@ -158,7 +159,7 @@
                     </ul>
                   </div>
                 
-                <div class="download">Redirect to my CV<a href="">Link</a></div>
+                <div class="download">Redirect to my CV <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/1t43AA5GZBWG2vQlJ_L6km9_mHzYI1oiDbDs01NqG7jE/edit?usp=sharing">Link</a></div>
             </div>
             <div class="container contact" id="contact">
                 <div class="nav-det">
@@ -203,7 +204,8 @@
                         <input type="submit" value="Submit" class="submit-btn">
                     </form>
                 </div>
-                <div class="download">Download my CV</div>
+                <div class="download">Redirect to my CV <a target="_blank" rel="noopener noreferrer" href="https://docs.google.com/document/d/1t43AA5GZBWG2vQlJ_L6km9_mHzYI1oiDbDs01NqG7jE/edit?usp=sharing">Link</a></div>
+            </div>
             </div>
         </div>
     </nav>
