transffered beer website to netlify from heroku

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="project-content">
                             <h2 class="project-title">Beer website</h2>
                             <p class="card-body">Template for a beer website. Technologies are React, Heroku and CSS</p>
-                            <a href="https://beer-website-sample.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
+                            <a href="https://beer-website-sample.netlify.app/" target="_blank" rel="noopener noreferrer" class="button"  >Visit site</a>
                         </div>
                     </div>
                     
