changed tagline to web developer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <nav>
         <h1>Ven Gallardo</h1>
         <div class="tagline">
-            My Minimalist <br/>Portfolio
+            <h1>WEB DEVELOPER</h1> 
+            <h1 class="tag__outline">UX/UI DESIGNER</h1>
         </div>
         <div class="nav-ctn">
             <div class="nav-btn" id="nav-btn">
