added new project , dev sublist

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
                             <a target="_blank" href="https://generative-art-ven-gallardo.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
+                    <div class="card eight">
+                        <div class="project-content">
+                            <h2 class="project-title">Web dev-sublist</h2>
+                            <p class="card-body">Portfolio collection for all developers</p>
+                            <a target="_blank" href="https://devsublist-pre-launch.netlify.app/" class="button">Visit site</a>
+                        </div>
+                    </div>
                     <div class="card seven">
                         <div class="project-content">
                             <h2 class="project-title">Beer website</h2>
