added my social media game

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
                     <h2>Personal Projects</h2>
                 </div>
                 <div class="myprojects">
+                    <div class="card ten">
+                        <div class="project-content">
+                            <h2 class="project-title">Social Media Game</h2>
+                            <p class="card-body">All users are bots other than you</p>
+                            <div class="techonologies">
+                                <span class="ts">React JS</span>
+                                <span class="ts">CSS</span>
+                            </div>
+                            <a  target="_blank" href="https://lunir.netlify.app/" class="button">Visit site</a>
+                        </div>
+                    </div>
                     <div class="card six">
                         <div class="project-content">
                             <h2 class="project-title">Generative Art</h2>
@@ -160,6 +171,7 @@
                             <a  target="_blank" href="https://competent-mcclintock-994ef7.netlify.app/" class="button">Visit site</a>
                         </div>
                     </div>
+                    
                 </div>
             </div>
             <div class="container myskill" id="skills">
